--- a/templates/comments-popover.html
+++ b/templates/comments-popover.html
@@ -10,7 +10,7 @@
     </div>
     <form>
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Type comment..." ng-model="newComment">
+            <input type="text" class="form-control" placeholder="Type comment..." ng-model="newComment" focus-on="discuss-opened">
                 <span class="input-group-btn">
                     <button class="btn btn-primary" ng-click="post(newComment); newComment = ''">Post</button>
                 </span>
