--- a/templates/comments-popover.html
+++ b/templates/comments-popover.html
@@ -1,11 +1,11 @@
 <div>
 	<div class="all-comments-wrapper">
-        <div ng-repeat="comment in articles[currentIndex].comments track by comment.date" class="comments-wrapper">
-            <div class="info-wrapper" ng-class="{'self': comment.user == username}">
+        <div ng-repeat="comment in articles[currentIndex].comments | orderBy : 'date'" class="comments-wrapper">
+            <div class="info-wrapper" ng-class="{'self': comment.user.id == user.id}">
                 <div class="name">{{comment.user.given_name || comment.user.id}}</div>
                 <div class="time-stamp">{{comment.date}}</div>
             </div>
-            <div class="well well-sm" ng-class="{'self': comment.user == username}">{{comment.text}}</div>	
+            <div class="well well-sm" ng-class="{'self': comment.user.id == user.id}">{{comment.text}}</div>	
         </div>
     </div>
     <form>
