--- a/styles/page-card.css
+++ b/styles/page-card.css
@@ -1,121 +1,138 @@
+/*Light*/
+/*Dark*/
+/* line 3, D:/work/dat/conduit/sass/page-card.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 9, D:/work/dat/conduit/sass/page-card.scss */
 body {
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	margin: 0px;
-	width: 100vw;
-	height: 100vh;
-	
-    font-size: 100%;
-	font-family: 'SourceSansPro', sans-serif;
-	
-	background-color: #f2f2f2;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
+  font-size: 100%;
+  font-family: 'SourceSansPro', sans-serif;
+  background-color: #f2f2f2;
 }
 
-.card {	
-	
-	margin-top: 20vh;
-	height: auto;
-
-	padding: 24px;
-
-	border-radius: 2px;
-	/*border: 1px solid $colorGrey;*/
-	background: #fff;
-	box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+/* line 26, D:/work/dat/conduit/sass/page-card.scss */
+.card {
+  margin-top: 20vh;
+  height: auto;
+  padding: 24px 16px;
+  border-radius: 2px;
+  /*border: 1px solid $colorGrey;*/
+  background: #fff;
+  box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
+/* line 39, D:/work/dat/conduit/sass/page-card.scss */
 .card .primary-title {
-	font-size: 24px;
-	padding-bottom: 16px;
+  font-size: 24px;
+  padding-bottom: 16px;
 }
 
+/* line 44, D:/work/dat/conduit/sass/page-card.scss */
 .card .supporting-text {
-	font-size: 14px;
-	margin-bottom: 16px;
+  font-size: 14px;
+  padding-bottom: 16px;
 }
 
+/* line 49, D:/work/dat/conduit/sass/page-card.scss */
 .card .action-area {
-	height: 36px;
+  height: 52px;
+  margin: 0 -16px -24px -16px;
 }
 
+/* line 54, D:/work/dat/conduit/sass/page-card.scss */
 .card .card-action {
-	height: 36px;
-	margin: 8px;
-	font-size: 16px;
-	padding: 10px;
-	background: transparent;
-	border: none;
-	border-radius: 2px !important;
-	float: right;
-	font-weight: 500;
-	text-decoration: none;
+  height: 36px;
+  margin: 8px;
+  font-size: 14px;
+  padding: 10px 16px;
+  background: transparent;
+  border: none;
+  border-radius: 2px !important;
+  float: right;
+  font-weight: 500;
+  text-decoration: none;
 }
+
+/* line 66, D:/work/dat/conduit/sass/page-card.scss */
 .card .card-action:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
+/* line 70, D:/work/dat/conduit/sass/page-card.scss */
 .card .default {
-	color: #212121;
+  color: #212121;
 }
 
+/* line 74, D:/work/dat/conduit/sass/page-card.scss */
 .card .default:hover {
-	background: rgba(33, 33, 33, 0.12);
+  background: rgba(33, 33, 33, 0.12);
 }
 
+/* line 78, D:/work/dat/conduit/sass/page-card.scss */
 .card .primary {
-	color: #009688;
+  color: #009688;
 }
 
+/* line 82, D:/work/dat/conduit/sass/page-card.scss */
 .card .primary:hover {
-	background: rgba(0, 150, 136, 0.12);
+  background: rgba(0, 150, 136, 0.12);
 }
 
-
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
-	.card {
-		width: 80vw;
-		margin-left: 10vw;
-	}
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 480px) {
+  /* line 89, D:/work/dat/conduit/sass/page-card.scss */
+  .card {
+    width: 80vw;
+    margin-left: 10vw;
+  }
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-	.card {	
-		width: 60vw;
-		margin-left: 20vw;
-	}
+@media only screen and (min-width: 768px) {
+  /* line 97, D:/work/dat/conduit/sass/page-card.scss */
+  .card {
+    width: 60vw;
+    margin-left: 20vw;
+  }
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-	.card {	
-		width: 50vw;
-		margin-left: 25vw;
-	}
+@media only screen and (min-width: 992px) {
+  /* line 105, D:/work/dat/conduit/sass/page-card.scss */
+  .card {
+    width: 50vw;
+    margin-left: 25vw;
+  }
 }
 
 /* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-	.card {	
-		width: 30vw;
-		margin-left: 35vw;
-	}
+@media only screen and (min-width: 1200px) {
+  /* line 113, D:/work/dat/conduit/sass/page-card.scss */
+  .card {
+    width: 30vw;
+    margin-left: 35vw;
+  }
 }
 
 /* Wide Screens, HD */
-@media only screen and (min-width : 1600px) {
-	.card {	
-		width: 20vw;
-		margin-left: 40vw;
-	}
+@media only screen and (min-width: 1600px) {
+  /* line 121, D:/work/dat/conduit/sass/page-card.scss */
+  .card {
+    width: 20vw;
+    margin-left: 40vw;
+  }
 }
+
+/*# sourceMappingURL=../styles/page-card.map */
